security/sg.tf
data "aws_availability_zones" "azs" {
  state = "available"
  
}

resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  instance_tenancy = "default"
  enable_dns_support = true
  
}

resource "aws_security_group" "firewall" {
  name        = "terraform_firewall"
  description = "firewall with terraform"
  vpc_id      = aws_vpc.main.id

  tags = {
    Name = "terraform-firewall"
  }

}

resource "aws_vpc_security_group_ingress_rule" "allow_http" {
  security_group_id = aws_security_group.firewall.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

resource "aws_vpc_security_group_ingress_rule" "allow_ssh" {
  security_group_id = aws_security_group.firewall.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv4" {
  security_group_id = aws_security_group.firewall.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}

output "vpc-id" {
  value = aws_security_group.firewall.id
    
}

output "sg-arn" {
  value = aws_security_group.firewall.arn
  
}

output "azs" {
  value = data.aws_availability_zones.azs
  
}
